[GGC-289] fixed gap

--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -14,6 +14,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  padding: 0 20px;
 }
 
 .gg-nav ul li {
